--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <div class=" col-xs-12 col-sm-8 col-sm-offset-2">
       <div class="form-login">
-        <h2 class="hidden-xs">Sign up with social network links...</h2>
+        <h2>Sign up with social network links...</h2>
         <%= render "devise/shared/socialnetworkslinks" %>
-        <h2 class="hidden-xs">... Or sign up with the good old way</h2>
+        <h2>... Or sign up with the good old way</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
