--- a/app/assets/stylesheets/demands/_new_demand.scss
+++ b/app/assets/stylesheets/demands/_new_demand.scss
@@ -1,8 +1,8 @@
 .form-demand-new {
   background: white;
   padding: 10px 20px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  // margin-top: 50px;
+  // margin-bottom: 50px;
   border-radius: 3px;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   h1 {
