--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,53 +1,22 @@
-<!-- <div class="wrapper-pages"> -->
-<div class="contact-background-image" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 0%), url('<%= image_path('parisjungle2.jpg')%>');">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-        <div class="brand-contact">
-          <h1>The <br> Real Estate <br> Jungle</h1>
+<div class="wrapper-pages">
+  <div class="contact-background-image" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 0%), url('<%= image_path('parisjungle2.jpg')%>');">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+          <div class="brand-contact">
+            <h1>The <br> Real Estate <br> Jungle</h1>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-md-10 col-md-offset-1">
-      <div class="contact-content">
-      <div>
-        <div class="text-center">
-          <%= image_tag "gautier.png", class: "contact-picture" %>
-          <h1>Gautier Weigert</h1>
-          <h2>Founder et CEO de The Real Estate Jungle</h2>
-          <p>Après avoir passé près de 6 ans dans le conseil en immobilier d'entreprise, j'ai décidé de développer The Real Estate Jungle pour adapter le conseil/brokerage immobilier de bureaux aux nouveaux modes de travail. Ce marché connaît une profonde mutation, d'une part car les modes de travail des utilisateurs (grandes entreprises et startups) changent, d'autre part car la commercialisation des biens immobiliers se digitalise.
-          <br>
-          <br>
-          Avec The Real Estate Jungle, nous souhaitons être le partenaire privilégié des startups et des grands groupes afin de leur faire bénéficier d'un accompagnement d'expert sur le marché de l'immobilier "flexible". Afin d'apporter un conseil objectif et pertinent, il est important de connaître les acteurs du marché, qu'ils soient utilisateurs, propriétaires ou encore prestataires de services (Coworking). C'est dans cet esprit de guide que The Real Estate Jungle intervient auprès de ses clients, de la phase amont de l'analyse des besoins à la finalisation des négociations.
-          <br>
-          <br>
-          En nous faisant confiance, vous bénéficierez :
-          <br> - de notre expérience dans la gestion de projets immobiliers acquise sur le terrain à rechercher, analyser et négocier pour le compte de différents types de clients sur diverses actifs.
-          <br> - de notre expertise financière pour la construction des analyses économiques de votre projet afin de réaliser des benchmarks des différentes solutions.
-          <br> - de nos conseils commerciaux et d'un accompagnement sur les accords juridiques que vous pourrez signer.
-          <br> - de nos recommandations afin de faire adhérer au plus grand nombre de vos collaborateurs à un projet potentiellement novateur pour votre entreprise.
-          <br>
-          <br>
-          N'hésitez pas à venir consulter mon profil Linkedin pour décourvir plus en détail mon parcours.
-          <br>
-          A bientôt dans cette fascinante jungle immobilière :)
-          </p>
-          <em>Tél: 06 17 98 75 96</em>
-          <br>
-          <em>Email: gautier@therealestatejungle.fr</em>
-          <br>
-          <a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-        </div>
-      </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
 
       </div>
     </div>
   </div>
-</div>
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
@@ -61,3 +30,4 @@
       </div>
     </div>
   </div>
+</div>
