--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -13,8 +13,8 @@
           </div>
             <%= simple_form_for :coworking, :method => 'get', :html => {:class => 'form-search-banner'}, url: coworkings_path do |f| %>
             <%= f.input_field :address, placeholder: "Où rêvez-vous de travailler ?", class: "search-query" %>
-            <%= f.submit "Rechecher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
-            <% end %>
+            <span><%= f.submit "Rechecher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
+            <% end %></span>
         </div>
       </div>
     </div>
