--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,16 +4,16 @@
 
       <div class="tabs">
         <a class="tab" data-target="#briefs">
-          <h3>Demandes</h3>
+          <h3><span><i class="fa fa-paper-plane" aria-hidden="true"></i></span> Demandes</h3>
         </a>
         <a class="tab" data-target="#Propositions">
-          <h3>Propositions</h3>
+          <h3><span><i class="fa fa-handshake-o" aria-hidden="true"></i></span> Propositions</h3>
         </a>
         <a class="tab active" data-target="#messages">
-          <h3>Messages</h3>
+          <h3><span><i class="fa fa-envelope" aria-hidden="true"></i></span> Messages</h3>
         </a>
         <a class="tab" data-target="#demands">
-          <h3>Critères</h3>
+          <h3><span><i class="fa fa-folder-open" aria-hidden="true"></i></span> Critères</h3>
         </a>
       </div>
 
